[package]
name = "tower-web-protobuf"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"

[dependencies]
tower-web = "0.3.6"
tower-service = "0.2.0"
tokio = "0.1.18"
serde = "1.0.89"
futures = "0.1.25"
prost = "0.5.0"
prost-derive = "0.5.0"
bytes = "0.4.12"
http = "0.1.14"

[build-dependencies]
prost-build = "0.5.0"
