[package]
name = "tower-web-protobuf"
description = "Middleware and friends for tower-web that help with Protobufs"
version = "0.1.0"
authors = ["Rahul Butani <rr.butani@gmail.com>"]
edition = "2018"
repository = "https://github.com/rrbutani/tower-web-protobuf.git"
license = "MIT"
readme = "README.md"

[dependencies]
tower-web = "0.3.6"
tower-service = "0.1.0"
tokio = "0.1.18"
serde = "1.0.89"
serde_json = "1.0.39"
serde_plain = "0.3.0"
futures = "0.1.25"
prost = "0.5.0"
prost-derive = "0.5.0"
bytes = "0.4.12"
http = "0.1.14"
reqwest = "0.9.14"

[build-dependencies]
prost-build = "0.5.0"
